tests/negative/typecheck/sum-expr.orng
fn main() -> Int
    let x: (y | z + 3)
    4